--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,13 @@ on:
       ref:
         description: 'Ref to build (for Pull Requests, use refs/pull/NNN/head)'
         required: true
-  repository_dispatch:
+#  repository_dispatch:
     # client_payload should be the same as the inputs for workflow_dispatch.
-    types:
-    - Build*
-  release:
-    types:
-    - published
+#    types:
+#    - Build*
+#  release:
+#    types:
+#    - published
 
 jobs:
   source:
