--- a/.github/workflows/myRelease.yml
+++ b/.github/workflows/myRelease.yml
@@ -21,6 +21,16 @@ jobs:
     uses: ./.github/workflows/release-source.yml
     secrets: inherit
 
+  linux:
+    name: Linux (Generic)
+    needs: source
+
+    uses: ./.github/workflows/release-linux.yml
+    secrets: inherit
+
+    with:
+      survey_key: ${{ needs.source.outputs.survey_key }}
+
   macos:
     name: MacOS
     needs: source
@@ -46,6 +56,7 @@ jobs:
     name: Upload
     needs:
     - source
+    - linux
     - macos
     - windows
 
@@ -61,6 +72,7 @@ jobs:
     name: Release GitHub assets
     needs:
     - source
+    - linux
     - macos
     - windows
 
